@@ -41,10 +41,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
+                 <configuration>
+                <source>21</source>
+                <target>21</target>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
